# Simple_Painter

./: CMakeLists.txt  README.md  main.cpp
include/: canvas.h  colorbutton.h  mainwindow.h
src/: canvas.cpp  colorbutton.cpp  mainwindow.cpp
